--- a/README
+++ b/README
@@ -6,11 +6,11 @@ to check desktop notifications. Balert will say it clear and loud
 whenever your battery status goes below a default critical level or the
 level decided by you!
 
-+------------------+
-| Build Status     |
-+==================+
-| |Build Status|   |
-+------------------+
++------------------+-----------+
+| Build Status     | Version   |
++==================+===========+
+| |Build Status|   | |Version| |
++------------------+-----------+
 
 `Demo`_
 -------
@@ -117,5 +117,7 @@ License
 .. figure:: https://cloud.githubusercontent.com/assets/7397433/9025904/67008062-3936-11e5-8803-e5b164a0dfc0.png
    :alt: gpl
 .. _Demo: https://cloud.githubusercontent.com/assets/7397433/9386259/47f4991a-4778-11e5-9aaa-54873acf3d31.gif
+.. |Version|  image:: https://badge.fury.io/py/Balert.svg
+    :target:  http://badge.fury.io/py/Balert
 .. |Build Status| image:: https://travis-ci.org/tushar-rishav/balert.svg?branch=master
    :target: https://travis-ci.org/tushar-rishav/balert
