--- a/README
+++ b/README
@@ -25,7 +25,8 @@ Build from source
 .. code:: sh
 
         wget "https://pypi.python.org/packages/source/B/Balert/Balert-1.0.7.tar.gz"
-        cd balert
+        tar xzvf Balert-1.0.7.tar.gz
+        cd Balert-1.0.7
         python setup.py install
 
 Using pip
